# mem-trace

./: .gitignore  AGENTS.md  CLAUDE.md  P3A_IMPLEMENTATION_PLAN.md  README.md  ROADMAP.md  alembic.ini  architecture.md  docker-compose.dev.yml  docker-compose.full.yml  docker-compose.scale.yml  docker-compose.yml  mvp.md  package.json  pyproject.toml  tsconfig.base.json  tsconfig.json
.agents/skills/review-agent-architecture/: SKILL.md
.agents/skills/sync-design-docs/: SKILL.md
.agents/skills/update-project-state/: SKILL.md
.ai/: ARCHITECTURE_SUMMARY.md  DECISIONS.md  IMPLEMENTATION_PLAN.md  MVP_SCOPE.md  OPEN_QUESTIONS.md  PITFALLS.md  PROJECT_BRIEF.md  PROJECT_STATE.md  REQUIREMENTS.md
.claude/skills/plan-implementation-slice/: SKILL.md
.claude/skills/prepare-coding-task/: SKILL.md
.claude/skills/resume-project/: SKILL.md
.claude/skills/review-agent-architecture/: SKILL.md
.claude/skills/sync-design-docs/: SKILL.md
.github/workflows/: ci.yml
apps/api/app/: __init__.py  config.py  embedding_server.py  main.py
apps/api/tests/: conftest.py
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/scripts/: capture-showcase-screenshots.mjs
apps/web/src/: App.tsx  main.tsx
apps/web/test/: access-replay.test.tsx  benchmark-lab.test.tsx  config.test.ts  fixtures.test.ts  memory-atlas-ops-showcase.test.tsx  normalizers.test.ts  overview.test.tsx  queries.test.ts  run-explorer.test.tsx  shell.test.tsx  ui-primitives.test.tsx
components/go-trace-collector/: README.md  go.mod  main.go
components/rust-profile-analyzer/: Cargo.toml  README.md
components/rust-profile-analyzer/src/: main.rs
deploy/: nginx.conf
docs/: advanced-retrieval-multi-hop.md  architecture-diagram.md  benchmark.md  concepts.md  deployment.md  getting-started.md  mcp.md  release-checklist.md
docs/assets/: benchmark_summary.json
docs/blog/: why-agent-memory-is-not-just-rag.md
docs/design/: CONTEXT_COMPACTION_PLAN.md  FAILURE_AWARE_NEGATIVE_MEMORY_PLAN.md  I7_COMPACTION_NEGATIVE_RETENTION_PLAN.md  INTEGRATIONS_PLAN.md  MAINTENANCE_ADMIN_GOVERNANCE_PLAN.md  OTEL_OPENINFERENCE_EXPORTER_PLAN.md  P3A_IMPLEMENTATION_PLAN.md  PHASE3B_DASHBOARD_PLAN.md  PHASE4_I7_INTEGRATIONS_PLAN.md  PHASE4_PLATFORM_PLAN.md  PROVIDER_REGISTRY_KEY_ONTOLOGY_PLAN.md  RELEASE_READINESS_PLAN.md  ROADMAP.md  SDK_ADAPTER_PLAN.md  SECURITY_CONSISTENCY_HARDENING_PLAN.md  SIX_STRATEGY_BENCHMARK_PLAN.md  draft.md
docs/superpowers/plans/: 2026-06-10-showcase-reproducibility.md  2026-06-13-h15-h18-security-hardening-closeout.md  2026-06-14-int-a-typescript-sdk.md  2026-06-14-int-b-mcp-server.md  2026-06-14-otel-segment2-exporters-service.md  2026-06-14-otel-segment3-runtime-export.md  2026-06-14-p4b-lifecycle-reflection.md  (+3 more)
examples/: README.md
examples/dogfood/: coding_agent.py  destructive_failure.py  multi_session_constraints.py
examples/langgraph_adapter/: main.py
examples/mcp/: cursor.json
examples/simple_agent/: main.py
migrations/: env.py  script.py.mako
migrations/versions/: 0001_initial.py  0002_pgvector.py  0003_memory_superseded_by.py  0004_phase3a_observability.py  0005_context_compaction.py  0006_security_consistency_hardening.py  0007_i7_retained_negative_evidence.py  0008_phase4_lifecycle.py  0009_memory_retention_signals.py  0010_memory_versions_conflicts.py  0011_governance.py  0012_maintenance_admin_governance.py  0013_workspace_membership.py  0014_content_trgm_index.py
scripts/: _perf_scale_load.py  _perf_scale_seed.py  check-release-hygiene.sh  fetch-longmemeval.sh  fetch-swe-trajectories.sh  perf-load.sh  perf-scale.sh  reproduce.sh  smoke-advanced-backends.sh  smoke-async-worker.sh  smoke-embedding-server.sh  smoke-release-readiness.sh  smoke.sh
(+236 files in other folders)
