[project]
name = "memtrace"
version = "0.1.0"
description = "MemTrace: state-aware memory runtime and profiler for long-horizon LLM agents (P0 MVP)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3.6",
    "alembic>=1.14",
    "greenlet>=3.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/api/app"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = ["--import-mode=importlib"]
testpaths = ["apps/api/tests", "packages/python-sdk/tests"]
pythonpath = ["apps/api", "packages/python-sdk/src"]

[tool.uv]
package = true

[tool.uv.workspace]
members = ["packages/python-sdk"]

[tool.uv.sources]
memtrace = { workspace = true }
