[project]
name = "memtrace"
version = "0.1.0"
description = "MemTrace: trace-first, state-aware memory runtime and profiler for long-horizon LLM agents"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "pgvector>=0.3.6",
    "alembic>=1.14",
    "greenlet>=3.1",
    "httpx>=0.27",
    "celery>=5.4",
    "redis>=5.0",
]

[project.urls]
Homepage = "https://github.com/MicroYui/mem-trace#readme"
Repository = "https://github.com/MicroYui/mem-trace"
Issues = "https://github.com/MicroYui/mem-trace/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]
telemetry = [
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
]
search = [
    "elasticsearch>=8.0",
]
graph = [
    "neo4j>=5.0",
]
jwt = [
    "PyJWT>=2.8",
]
crypto = [
    "cryptography>=42.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/api/app"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = ["--import-mode=importlib"]
testpaths = ["apps/api/tests", "packages/python-sdk/tests"]
pythonpath = ["apps/api", "packages/python-sdk/src"]
markers = [
    "postgres: tests that require MEMTRACE_TEST_DATABASE_URL and a disposable PostgreSQL database",
]

[tool.uv]
package = true

[tool.uv.workspace]
members = ["packages/python-sdk"]

[tool.uv.sources]
memtrace = { workspace = true }
